I don't know why this used to work so I'm scared now

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -47,7 +47,7 @@ services:
     networks:
       - clothesecommerce.1
     depends_on:
-      - eureka.c
+      - eureka
     deploy:
       restart_policy:
         condition: on-failure
