Authentication with one user, I hope

--- a/auth-service/appsettings.json
+++ b/auth-service/appsettings.json
@@ -8,6 +8,9 @@
   "ConnectionStrings":{
     "docker_db": "Server=sqlserver;database=clothesdb;User ID=SA;password=abc123!!@;"
   },
+  "AppSettings": {
+    "Token":  "my top secret key"
+  },
   "spring": {
     "application": {
       "name": "auth-service"
