--- a/spring-rabbitmq-consumer/src/main/resources/application.properties
+++ b/spring-rabbitmq-consumer/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-server.port=1112
+server.port=9000
 #spring.rabbitmq.addresses = 5672
 
-spring.rabbitmq.host=localhost
-
-spring.rabbitmq.password= guest
+spring.rabbitmq.host=message-queue
 spring.rabbitmq.port=5672
-
+spring.rabbitmq.password= guest
 spring.rabbitmq.username= guest
 
-spring.application.name=rabbit-consumer
+eureka.client.serviceUrl.defaultZone= http://eureka:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+
+
+spring.application.name=message-consumer
