--- a/spring-rabbitmq-producer/src/main/resources/application.properties
+++ b/spring-rabbitmq-producer/src/main/resources/application.properties
@@ -1,4 +1,13 @@
-server.port=1111
-spring.rabbitmq.addresses = localhost:5672
+server.port=9001
 
-spring.application.name= rabbit-producer
+spring.rabbitmq.host=message-queue
+spring.rabbitmq.port=5672
+spring.rabbitmq.password= guest
+spring.rabbitmq.username= guest
+
+eureka.client.serviceUrl.defaultZone= http://eureka:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+
+
+spring.application.name=message-producer
