--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -110,7 +110,7 @@ services:
     container_name: filter-service
     build:
       context: ./pythonFilter
-      dockerfile: dockerfile
+      dockerfile: DockerFile
     image: filter-service:1
     ports:
       - "8080:8080"
