fixed the issues

--- a/pythonFilter/DockerFile
+++ b/pythonFilter/DockerFile
@@ -10,4 +10,4 @@ RUN pip3 install -r requirements.txt
 
 EXPOSE 8080 8080
 
-CMD [ "python", "./producer.py", "flask"]
+CMD [ "python", "./filter.py", "flask"]
