--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -110,10 +110,10 @@ services:
     container_name: filter-service
     build:
       context: ./pythonFilter
-      dockerfile: dockerfile
+      dockerfile: DockerFile
     image: filter-service:1
     ports:
-      - "8080:8080"
+      - "8081:8080"
     networks:
       - clothesecommerce.1
     depends_on:
