--- a/spring-rabbitmq-producer/pom.xml
+++ b/spring-rabbitmq-producer/pom.xml
@@ -51,6 +51,13 @@
 			<artifactId>json-smart</artifactId>
 			<version>2.4.8</version>
 		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+
+
 
 	</dependencies>
 
